--- a/src/index.css
+++ b/src/index.css
@@ -23,45 +23,7 @@ body {
   position: relative;
 }
 
-.dropdown {
-  opacity: 0;
-  position: absolute;
-  top:25px;
-  width: 70px;
-  z-index: 0;
-  background: rgb(255, 255, 255);
-  outline: none;
-  border:1px solid transparent;
-  border-radius: 10px;
-  right: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 5rem;
-  margin-top: 1rem;
-  padding: 0.5rem;
-  transform: translateX(-40%);
-  transition: opacity .15s ease-out;
-  font-size:1rem;
-}
-
-.dropdown-item a {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-
-.has-dropdown:focus-within .dropdown   {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.dropdown-btn {
-  text-decoration: none;
-  color: black;
-}
-
-.dropdown-btn:hover {
-  text-decoration: line-through;
+.fa-sort-down {
+  margin-left: 10px;
+  color:#1f4037;
 }
