--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FFF7F8;
 }
 
 .imgbtn {
